2017-09-24  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppGSL-intro.Rmd: Now typset in two-column mode

2017-09-23  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppGSL-intro.Rmd: Converted to Rmd, uses pinp

	* DESCRIPTION: Updated Suggests: and VignetteBuilder:
	* .travis.yml (before_install): Install r-cran-pinp
	* cleanup: Extended

2017-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (before_install): Use https for curl fetch

2017-04-03  Dirk Eddelbuettel  <edd@debian.org>

	* R/inline.R (.onLoad): Check for gsl-config at run-time too

2017-03-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.2
	* DESCRIPTION (Description): Reworded and shortened

	* src/init.c (R_init_RcppGSL): Call R_registerRoutines()
	and R_useDynamicSymbols()

	* NAMESPACE: Use .registration=TRUE on useDynLib

	* R/fastLm.R (fastLmPure): Use PACKAGE= with .Call()

	* README.md: One more canonical URL

2017-01-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/skeleton/configure (GSL_LIBS): No longer need RCPP_LIBS
	* inst/skeleton/configure.win (GSL_LIBS): Idem
	* inst/skeleton/Makevars.in (PKG_CPPFLAGS): Idem
	* inst/skeleton/Makevars.win (PKG_LIBS): Idem

	* R/inline.R: Updated / edited

2016-10-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.1

	* tests/doRUnit.R: Rewritten in simpler form following lead of some
	other packages using the RUnit testing frameworks

	* R/unit.test.R: Remove unused and unexported function
	* inst/unitTests/runTests.R: Ditto

	* vignettes/RcppGSL-intro.Rnw: Restore 'boxed' display of code

	* .travis.yml: Switch to using run.sh for Travis CI

2016-05-19  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppGSL-unitTests.Rnw: Do not write unit test results to
	/tmp per request from CRAN to not write outside test directories

2015-08-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.0

	* vignettes/RcppGSL-intro.Rnw: Minor edits
