@@ -1,6 +1,10 @@
 2017-09-24  Dirk Eddelbuettel  <edd@debian.org>
 
+	* DESCRIPTION (Version, Date): Release 0.3.3
+
 	* vignettes/RcppGSL-intro.Rmd: Now typset in two-column mode
+
+	* tests/doRUnit.R: Small edits and improvements
 
 2017-09-23  Dirk Eddelbuettel  <edd@debian.org>
 
